--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "title": "liyuz/html2canvas",
-  "name": "liyuz/html2canvas",
+  "title": "html2canvas",
+  "name": "@liyuz/html2canvas",
   "description": "Screenshots with JavaScript",
   "main": "dist/html2canvas.js",
   "module": "dist/html2canvas.esm.js",
   "typings": "dist/types/index.d.ts",
   "browser": "dist/html2canvas.js",
   "version": "1.4.1",
-  "author": "liyuz",
+  "author": {
+    "name": "Niklas von Hertzen",
+    "email": "niklasvh@gmail.com",
+    "url": "https://hertzen.com"
+  },
   "engines": {
     "node": ">=8.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:liyuz/html2canvas.git"
+    "url": "git@github.com:niklasvh/html2canvas.git"
   },
   "bugs": {
-    "url": "https://github.com/liyuz/html2canvas/issues"
+    "url": "https://github.com/niklasvh/html2canvas/issues"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
