--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "title": "html2canvas",
-  "name": "@liyuz/html2canvas",
+  "name": "@strongberry/html2canvas",
   "description": "Screenshots with JavaScript",
   "main": "dist/html2canvas.js",
   "module": "dist/html2canvas.esm.js",
   "typings": "dist/types/index.d.ts",
   "browser": "dist/html2canvas.js",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "author": {
     "name": "Niklas von Hertzen",
     "email": "niklasvh@gmail.com",
